# motify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: config.rs  main.rs  reporter.rs  symlink.rs
test/: motify.yaml  windows.txt
