[package]
name = "motify"
version = "0.1.0"
authors = ["Precociouslydigital <fellfromatree@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "~0.4"
clap = "~3.0.0-beta.2"
bunt = "~0.2.4"
symlink = "0.1.0"
strum = "~0.20"
strum_macros = "~0.20"
shellexpand = "~2.1.0"
home = "0.3.0"